--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,9 @@ runs:
   - name: Check if new version is greater
     id: check_version
     run: |
+      python -m venv venv
+      . venv/bin/activate
+      python -m pip install --upgrade pip
       pip install semver
       is_greater=$(python -m semver compare ${{ steps.current_version.outputs.version }} ${{ steps.prev_version.outputs.version }})
       echo "is_version_greater=$(test $is_greater -eq 1 && echo true || echo false)" >> "$GITHUB_OUTPUT"
